--- a/SVM Tests.ipynb
+++ b/SVM Tests.ipynb
@@ -498,6 +498,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: test higher dimensions here!"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -551,6 +560,16 @@
     }
    ],
    "source": [
+    "# Kernel ridge lets memory explode!\n",
+    "# Storing an NxN matrix should require:\n",
+    "# N^2 × 32bits ÷ 8bits ÷ 1024^3 (GB), 13.411 (26.8221) GB if we use float32 (64)\n",
+    "# Should be enough!\n",
+    "# See https://github.com/scikit-learn/scikit-learn/blob/1495f6924/sklearn/kernel_ridge.py#L16\n",
+    "# for more information...\n",
+    "# https://github.com/scikit-learn/scikit-learn/blob/1495f6924/sklearn/linear_model/ridge.py#L586\n",
+    "# describes the kernel inversion method\n",
+    "# it is exactly the same as the one from the 2015 paper\n",
+    "\n",
     "clf = KernelRidge(alpha=1.0, kernel='linear')\n",
     "clf.fit(train_data_bin, train_labels_bin) "
    ]
