decreased floating precision

--- a/SVM Tests.ipynb
+++ b/SVM Tests.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.svm import LinearSVC\n",
     "from sklearn.kernel_ridge import KernelRidge\n",
     "from sklearn.linear_model import RidgeClassifier\n",
     "from sklearn.kernel_approximation import RBFSampler\n",
@@ -25,8 +26,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_data_fashion_mnist.npy\ttrain_data_fashion_mnist.npy\r\n",
-      "test_targets_fashion_mnist.npy\ttrain_targets_fashion_mnist.npy\r\n"
+      "test_data_fashion_mnist.npy\ttrain_data_fashion_mnist.npy\n",
+      "test_targets_fashion_mnist.npy\ttrain_targets_fashion_mnist.npy\n"
      ]
     }
    ],
@@ -372,29 +373,69 @@
    "source": [
     "train_data_bin = threshold_binarize(train_data, 10)\n",
     "test_data_bin = threshold_binarize(test_data, 10)\n",
-    "all_data = np.vstack([train_data_bin, test_data_bin])"
+    "all_data = np.vstack([train_data_bin, test_data_bin]).astype('uint8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def synthetic_opu(data, output_dim, std_dev):\n",
-    "    A = np.random.normal(loc=0.0, scale=std_dev, size=(data.shape[1], output_dim))\n",
-    "    B = np.random.normal(loc=0.0, scale=std_dev, size=(data.shape[1], output_dim))\n",
+    "    A = np.random.normal(loc=0.0, scale=std_dev, size=(data.shape[1], output_dim)).astype('float32')\n",
+    "    B = np.random.normal(loc=0.0, scale=std_dev, size=(data.shape[1], output_dim)).astype('float32')\n",
     "    \n",
     "    return (data @ A)**2 + (data @ B)**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_proj = synthetic_opu(all_data, output_dim=int(1e4), std_dev=1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.uint8"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(all_data[0,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float32"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data_proj[0,0])"
    ]
   },
   {
@@ -443,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +532,40 @@
     }
    ],
    "source": [
-    "# OPU: dim=10K, std_dev=1.0\n",
+    "# OPU: dim=10K, std_dev=1.0, 64bits\n",
+    "clf = RidgeClassifier(alpha=1.0)\n",
+    "clf.fit(train_proj, train_labels)\n",
+    "clf.score(test_proj, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/sklearn/linear_model/ridge.py:112: LinAlgWarning: scipy.linalg.solve\n",
+      "Ill-conditioned matrix detected. Result is not guaranteed to be accurate.\n",
+      "Reciprocal condition number6.986278e-09\n",
+      "  overwrite_a=True).T\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8816"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# OPU: dim=10K, std_dev=1.0, 32bits\n",
     "clf = RidgeClassifier(alpha=1.0)\n",
     "clf.fit(train_proj, train_labels)\n",
     "clf.score(test_proj, test_labels)"
@@ -583,6 +657,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear SVM (uses LibLinear instead of LibSVM), dim=10K, OPU features\n",
+    "\n",
+    "since = time.time()\n",
+    "\n",
+    "clf = LinearSVC(C=1.0)\n",
+    "clf.fit(train_proj, train_labels)\n",
+    "score = clf.score(test_proj, test_labels)\n",
+    "\n",
+    "elapsed = time.time() - since\n",
+    "\n",
+    "print('Score:', score)\n",
+    "print('Time:', elapsed)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -642,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
