implemented custom ridge regression solver

--- a/ridge_class_and_svm_tests.ipynb
+++ b/ridge_class_and_svm_tests.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,479 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import rbf_kernel\n",
+    "from sklearn.metrics.pairwise import polynomial_kernel\n",
+    "\n",
+    "def opu_kernel(x, y, gamma=1):\n",
+    "    kernel = polynomial_kernel(x, Y=y, degree=2, gamma=1, coef0=0)\n",
+    "    norm_x_sq = np.linalg.norm(x, ord=2, axis=1, keepdims=True) ** 2\n",
+    "    norm_y_sq = np.linalg.norm(y, ord=2, axis=1, keepdims=True) ** 2\n",
+    "\n",
+    "    # corresponds to element-wise addition of norm_x^2 * norm_y^2\n",
+    "    kernel += np.dot(norm_x_sq, norm_y_sq.T)\n",
+    "    \n",
+    "    kernel *= gamma\n",
+    "    \n",
+    "    return kernel\n",
+    "\n",
+    "kernels = {\n",
+    "    # rbf kernels with automatic lengthscale determination\n",
+    "    'rbf': lambda x, y: rbf_kernel(x, Y=y, gamma=None),\n",
+    "    # simplest polynomial kernel of degree 2\n",
+    "    'hom_poly2': lambda x, y: polynomial_kernel(x, Y=y, degree=2, gamma=1, coef0=0),\n",
+    "    # automatic choice of gamma\n",
+    "    'hom_poly2_auto': lambda x, y: polynomial_kernel(x, Y=y, degree=2, gamma=None, coef0=0),\n",
+    "    # inhomogeneous polynomial kernel\n",
+    "    'poly2': lambda x, y: polynomial_kernel(x, Y=y, degree=2, gamma=1, coef0=1),\n",
+    "    # automatic choice of gamma\n",
+    "    'poly2_auto': lambda x, y: polynomial_kernel(x, Y=y, degree=2, gamma=None, coef0=1),\n",
+    "    # opu kernel\n",
+    "    'opu': lambda x, y: opu_kernel(x, y, gamma=1)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Small Scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "opu\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 9.500398874282837\n",
+      "Score: 77.64999999999999\n",
+      "hom_poly2_auto\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 0.7988121509552002\n",
+      "Score: 75.83\n",
+      "hom_poly2\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 9.985361337661743\n",
+      "Score: 77.37\n",
+      "poly2_auto\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 0.581068754196167\n",
+      "Score: 78.8\n",
+      "poly2\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 10.508873224258423\n",
+      "Score: 77.41\n",
+      "rbf\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 0.49535679817199707\n",
+      "Score: 79.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, kernel_fun in kernels.items():\n",
+    "    print(key)\n",
+    "    print('-------')\n",
+    "    kernel_matrix = kernel_fun(train_data_bin[:1000], train_data_bin[:1000])\n",
+    "    clf = KernelRidge(alpha=0.5, kernel=\"precomputed\")\n",
+    "    \n",
+    "    since = time.time()\n",
+    "    clf.fit(kernel_matrix, train_labels_bin[:1000], cg=True, tol=1e-5)\n",
+    "    elapsed = time.time() - since\n",
+    "\n",
+    "    test_kernel = kernel_fun(test_data_bin, train_data_bin[:1000])\n",
+    "    predictions = clf.predict(test_kernel)\n",
+    "    score = np.sum(np.equal(np.argmax(predictions, 1), np.argmax(test_labels_bin, 1))) / len(test_data_bin) * 100\n",
+    "\n",
+    "    print('Time:', elapsed)\n",
+    "    print('Score:', score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "opu\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 8.766973495483398\n",
+      "Score: 77.64999999999999\n",
+      "hom_poly2_auto\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 0.5078413486480713\n",
+      "Score: 73.49\n",
+      "hom_poly2\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 7.535662889480591\n",
+      "Score: 77.37\n",
+      "poly2_auto\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 0.7708339691162109\n",
+      "Score: 78.35\n",
+      "poly2\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 6.599894046783447\n",
+      "Score: 77.41\n",
+      "rbf\n",
+      "-------\n",
+      "Kernel shape (1000, 1000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 0.31612133979797363\n",
+      "Score: 78.36\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, kernel_fun in kernels.items():\n",
+    "    print(key)\n",
+    "    print('-------')\n",
+    "    kernel_matrix = kernel_fun(train_data_bin[:1000], train_data_bin[:1000])\n",
+    "    clf = KernelRidge(alpha=1.0, kernel=\"precomputed\")\n",
+    "    \n",
+    "    since = time.time()\n",
+    "    clf.fit(kernel_matrix, train_labels_bin[:1000], cg=True, tol=1e-5)\n",
+    "    elapsed = time.time() - since\n",
+    "\n",
+    "    test_kernel = kernel_fun(test_data_bin, train_data_bin[:1000])\n",
+    "    predictions = clf.predict(test_kernel)\n",
+    "    score = np.sum(np.equal(np.argmax(predictions, 1), np.argmax(test_labels_bin, 1))) / len(test_data_bin) * 100\n",
+    "\n",
+    "    print('Time:', elapsed)\n",
+    "    print('Score:', score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel_matrix = rbf_kernel(train_data_bin[:10000], Y=None, gamma=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = KernelRidge(alpha=1.0, kernel=\"precomputed\", degree=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kernel shape (10000, 10000)\n",
+      "Running CG for dim 0\n",
+      "CG Status: 0\n",
+      "Running CG for dim 1\n",
+      "CG Status: 0\n",
+      "Running CG for dim 2\n",
+      "CG Status: 0\n",
+      "Running CG for dim 3\n",
+      "CG Status: 0\n",
+      "Running CG for dim 4\n",
+      "CG Status: 0\n",
+      "Running CG for dim 5\n",
+      "CG Status: 0\n",
+      "Running CG for dim 6\n",
+      "CG Status: 0\n",
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Time: 44.15295433998108\n",
+      "Score: 83.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "since = time.time()\n",
+    "clf.fit(kernel_matrix, train_labels_bin[:10000], cg=True, tol=1e-5)\n",
+    "elapsed = time.time() - since\n",
+    "\n",
+    "test_kernel = rbf_kernel(test_data_bin, train_data_bin[:10000])\n",
+    "predictions = clf.predict(test_kernel)\n",
+    "score = np.sum(np.equal(np.argmax(predictions, 1), np.argmax(test_labels_bin, 1))) / len(test_data_bin) * 100\n",
+    "\n",
+    "print('Time:', elapsed)\n",
+    "print('Score:', score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -698,28 +1170,81 @@
      "output_type": "stream",
      "text": [
       "Running CG for dim 0\n",
+      "CG Status: 0\n",
       "Current coef shape (60000,)\n",
       "Running CG for dim 1\n",
+      "CG Status: 0\n",
       "Current coef shape (60000,)\n",
       "Running CG for dim 2\n",
+      "CG Status: 0\n",
       "Current coef shape (60000,)\n",
       "Running CG for dim 3\n",
+      "CG Status: 0\n",
       "Current coef shape (60000,)\n",
       "Running CG for dim 4\n",
+      "CG Status: 0\n",
       "Current coef shape (60000,)\n",
       "Running CG for dim 5\n",
+      "CG Status: 0\n",
       "Current coef shape (60000,)\n",
       "Running CG for dim 6\n",
+      "CG Status: 0\n",
       "Current coef shape (60000,)\n",
-      "Running CG for dim 7\n"
+      "Running CG for dim 7\n",
+      "CG Status: 0\n",
+      "Current coef shape (60000,)\n",
+      "Running CG for dim 8\n",
+      "CG Status: 0\n",
+      "Current coef shape (60000,)\n",
+      "Running CG for dim 9\n",
+      "CG Status: 0\n",
+      "Current coef shape (60000,)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<kernel_ridge.KernelRidge at 0x7f19f25d8e48>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Adapted Kernel Ridge\n",
     "\n",
-    "clf = KernelRidge(alpha=1.0, kernel='polynomial', degree=2, lr=1e-5, epochs=10)\n",
+    "clf = KernelRidge(alpha=1.0, kernel='rbf', degree=2, lr=1e-5, epochs=10)\n",
     "clf.fit(train_data_bin, train_labels_bin) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = clf.predict(test_data_bin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scipy cg method rbf\n",
+    "score = np.sum(np.equal(np.argmax(predictions, 1), np.argmax(test_labels_bin, 1))) / len(test_data_bin) * 100\n",
+    "print(score)"
    ]
   },
   {
@@ -803,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,9 +1337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85.47\n"
+     ]
+    }
+   ],
    "source": [
     "# scipy cg method\n",
     "score = np.sum(np.equal(np.argmax(predictions, 1), np.argmax(test_labels_bin, 1))) / len(test_data_bin) * 100\n",
