Add tentative CUDA code for LBFGS-Pytorch

--- a/PytorchLBFGSexample.ipynb
+++ b/PytorchLBFGSexample.ipynb
@@ -103,7 +103,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Send it to GPU (this code has NOT been tested)\n",
+    "\n",
+    "X_t = torch.FloatTensor(X).cuda()\n",
+    "y_t = torch.FloatTensor(y).cuda()\n",
+    "\n",
+    "model = LinearRegressionModel(d=d)  # dimension = number of parameters\n",
+    "model.cuda()\n",
+    "# define criterion - loss function\n",
+    "criterion = MSELoss()\n",
+    "# define optimizer\n",
+    "optimizer = LBFGS(model.parameters(), max_iter=100, history_size=10)  # change here iteratation number and history size\n",
+    "\n",
+    "# define model and gradient descent\n",
+    "def closure():\n",
+    "    Y_pred = model(Variable(X_t))\n",
+    "    loss = criterion(Y_pred, Variable(y_t))\n",
+    "    epoch_loss = loss.data\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    return loss\n",
+    "optimizer.step(closure)\n",
+    "output_w = np.array(model.fc.weight.data)"
+   ]
   }
  ],
  "metadata": {
