added a lot of automatic computation for class. benchmark'

--- a/Tests Jonas/gpu_ridge_classifier.ipynb
+++ b/Tests Jonas/gpu_ridge_classifier.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -20,27 +19,23 @@
     "from sklearn.preprocessing import LabelBinarizer\n",
     "\n",
     "import time\n",
-    "from gpu_energy.power_info import EnergyMonitor\n",
-    "\n",
     "\n",
     "import synthetic_opu\n",
-    "from multiple_regression_solver import MultipleRegressionSolver\n",
-    "\n"
+    "from multiple_regression_solver import MultipleRegressionSolver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# (train_data, train_labels), (test_data, test_labels) = FashionMNIST()\n",
-    "#dataset_folder = \"../../datasets/export\" \n",
-    "dataset_folder = \"../Datasets\"\n",
-    "train_data = np.load(dataset_folder+'/fashion_mnist/numpy/train_data_fashion_mnist.npy').astype('uint8')\n",
-    "test_data = np.load(dataset_folder+'/fashion_mnist/numpy/test_data_fashion_mnist.npy').astype('uint8')\n",
-    "train_labels = np.load(dataset_folder+'/fashion_mnist/numpy/train_targets_fashion_mnist.npy').astype('uint8')\n",
-    "test_labels = np.load(dataset_folder+'/fashion_mnist/numpy/test_targets_fashion_mnist.npy').astype('uint8')\n",
+    "\n",
+    "train_data = np.load('../datasets/export/fashion_mnist/numpy/train_data_fashion_mnist.npy').astype('uint8')\n",
+    "test_data = np.load('../datasets/export/fashion_mnist/numpy/test_data_fashion_mnist.npy').astype('uint8')\n",
+    "train_labels = np.load('../datasets/export/fashion_mnist/numpy/train_targets_fashion_mnist.npy').astype('uint8')\n",
+    "test_labels = np.load('../datasets/export/fashion_mnist/numpy/test_targets_fashion_mnist.npy').astype('uint8')\n",
     "\n",
     "# Convert one-hot to integers\n",
     "train_labels = np.argmax(train_labels, axis=1)\n",
@@ -54,24 +49,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected GPU(s): GPU 0 (161.69 W), GPU 1 (30.26 W), GPU 2 (32.2 W).\n",
-      "Stop monitoring GPUs.\n"
-     ]
-    }
-   ],
-   "source": [
-    "EM = EnergyMonitor()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,14 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting GPU energy monitoring in background... OK.\n",
       "Processing chunk of size: torch.Size([5000, 784])\n",
       "Processing chunk of size: torch.Size([5000, 784])\n",
       "Processing chunk of size: torch.Size([5000, 784])\n",
@@ -139,34 +115,25 @@
       "Processing chunk of size: torch.Size([5000, 784])\n",
       "Processing chunk of size: torch.Size([5000, 784])\n",
       "Processing chunk of size: torch.Size([5000, 784])\n",
-      "Total time elapsed (seconds): 14.751839876174927\n",
-      "Time per chunk (seconds): 1.0537028482982091\n"
+      "Total time elapsed (seconds): 115.48934745788574\n",
+      "Time per chunk (seconds): 8.249239104134697\n"
      ]
     }
    ],
    "source": [
-    "out_dim = 10000\n",
-    "ener1 = EM.energy()\n",
-    "data_proj = synthetic_opu.project_big_np_matrix(all_data, out_dim=10000, chunk_size=5000, projection='opu',\n",
+    "data_proj = synthetic_opu.project_big_np_matrix(all_data, out_dim=100000, chunk_size=5000, projection='opu',\n",
     "                          framework='pytorch', dtype=torch.FloatTensor, cuda=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_proj = data_proj[:len(train_data_bin)]\n",
     "test_proj = data_proj[len(train_data_bin):]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -177,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,33 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "solver = MultipleRegressionSolver(train_proj, train_labels_bin, batch_size=128, cuda=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " GPU | Energy (J) | Avg. pow (W)\n",
-      "   0 |    1265.30 |       126.34\n",
-      "   2 |     325.62 |        32.51\n",
-      "   1 |     304.28 |        30.38\n",
-      " over a period of 10015 milliseconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "ener2 = EM.energy()\n",
-    "print(ener2-ener1)"
    ]
   },
   {
@@ -234,77 +179,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "optimizer = torch.optim.Adam(solver.model.parameters(), lr=1e-3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0 Loss: 58.79425048828125 Accuracy: 12.5\n",
-      "Epoch: 1 Loss: 1.1396335363388062 Accuracy: 49.21875\n",
-      "Epoch: 2 Loss: 0.5425878167152405 Accuracy: 78.125\n",
-      "Epoch: 3 Loss: 0.757494330406189 Accuracy: 69.53125\n",
-      "Epoch: 4 Loss: 4.021361351013184 Accuracy: 20.3125\n",
-      "Epoch: 5 Loss: 2.530369281768799 Accuracy: 41.40625\n",
-      "Epoch: 6 Loss: 2.572263717651367 Accuracy: 38.28125\n",
-      "Epoch: 7 Loss: 1.3776670694351196 Accuracy: 52.34375\n",
-      "Epoch: 8 Loss: 1.5671007633209229 Accuracy: 49.21875\n",
-      "Epoch: 9 Loss: 5.898340702056885 Accuracy: 15.625\n",
-      "Epoch: 10 Loss: 4.693675518035889 Accuracy: 35.9375\n",
-      "Epoch: 11 Loss: 1.8051496744155884 Accuracy: 51.5625\n",
-      "Epoch: 12 Loss: 1.6415901184082031 Accuracy: 35.9375\n",
-      "Epoch: 13 Loss: 1.3518457412719727 Accuracy: 45.3125\n",
-      "Epoch: 14 Loss: 5.09631872177124 Accuracy: 14.84375\n",
-      "Epoch: 15 Loss: 1.6905406713485718 Accuracy: 43.75\n",
-      "Epoch: 16 Loss: 5.776478290557861 Accuracy: 15.625\n",
-      "Epoch: 17 Loss: 1.8163782358169556 Accuracy: 56.25\n",
-      "Epoch: 18 Loss: 13.81782054901123 Accuracy: 32.8125\n",
-      "Epoch: 19 Loss: 3.8467628955841064 Accuracy: 50.78125\n",
-      "Epoch: 20 Loss: 1.3795758485794067 Accuracy: 60.15625\n",
-      "Epoch: 21 Loss: 2.209519147872925 Accuracy: 52.34375\n",
-      "Epoch: 22 Loss: 2.7470812797546387 Accuracy: 65.625\n",
-      "Epoch: 23 Loss: 26.542272567749023 Accuracy: 6.25\n",
-      "Epoch: 24 Loss: 4.141961574554443 Accuracy: 24.21875\n",
-      "Epoch: 25 Loss: 2.951876163482666 Accuracy: 28.90625\n",
-      "Epoch: 26 Loss: 2.728762149810791 Accuracy: 22.65625\n",
-      "Epoch: 27 Loss: 4.007211685180664 Accuracy: 28.90625\n",
-      "Epoch: 28 Loss: 4.814054012298584 Accuracy: 44.53125\n",
-      "Epoch: 29 Loss: 3.6821517944335938 Accuracy: 14.0625\n",
-      "Epoch: 30 Loss: 4.029627799987793 Accuracy: 22.65625\n",
-      "Epoch: 31 Loss: 1.599780797958374 Accuracy: 27.34375\n",
-      "Epoch: 32 Loss: 2.5445780754089355 Accuracy: 14.0625\n",
-      "Epoch: 33 Loss: 3.8015856742858887 Accuracy: 16.40625\n",
-      "Epoch: 34 Loss: 5.414088249206543 Accuracy: 26.5625\n",
-      "Epoch: 35 Loss: 8.51508903503418 Accuracy: 38.28125\n",
-      "Epoch: 36 Loss: 3.2794127464294434 Accuracy: 54.6875\n",
-      "Epoch: 37 Loss: 4.24887752532959 Accuracy: 28.90625\n",
-      "Epoch: 38 Loss: 12.067586898803711 Accuracy: 25.78125\n",
-      "Epoch: 39 Loss: 22.49577522277832 Accuracy: 16.40625\n",
-      "Epoch: 40 Loss: 0.945656418800354 Accuracy: 64.0625\n",
-      "Epoch: 41 Loss: 1.753171682357788 Accuracy: 47.65625\n",
-      "Epoch: 42 Loss: 0.3675574064254761 Accuracy: 84.375\n",
-      "Epoch: 43 Loss: 4.567006587982178 Accuracy: 20.3125\n",
-      "Epoch: 44 Loss: 0.6480677723884583 Accuracy: 75.78125\n",
-      "Epoch: 45 Loss: 0.699083685874939 Accuracy: 68.75\n",
-      "Epoch: 46 Loss: 0.9154641032218933 Accuracy: 75.0\n",
-      "Epoch: 47 Loss: 3.8656554222106934 Accuracy: 17.96875\n",
-      "Epoch: 48 Loss: 9.031903266906738 Accuracy: 12.5\n",
-      "Epoch: 49 Loss: 7.350386142730713 Accuracy: 10.9375\n"
-     ]
-    }
-   ],
-   "source": [
-    "coefficients = solver.fit(optimizer, epochs=50)"
    ]
   },
   {
@@ -316,22 +195,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 59.123333333333335\n"
+      "Epoch: 0 Loss: 0.1977643072605133 Accuracy: 82.2\n",
+      "Epoch: 1 Loss: 0.24057672917842865 Accuracy: 78.5\n",
+      "Epoch: 2 Loss: 0.1988341361284256 Accuracy: 81.1\n",
+      "Epoch: 3 Loss: 0.19358235597610474 Accuracy: 82.8\n",
+      "Epoch: 4 Loss: 0.17926564812660217 Accuracy: 85.3\n",
+      "Epoch: 5 Loss: 0.18776938319206238 Accuracy: 84.3\n",
+      "Epoch: 6 Loss: 0.18488942086696625 Accuracy: 83.4\n",
+      "Epoch: 7 Loss: 0.184470534324646 Accuracy: 83.7\n",
+      "Epoch: 8 Loss: 0.17958873510360718 Accuracy: 80.9\n",
+      "Epoch: 9 Loss: 0.16421706974506378 Accuracy: 85.0\n",
+      "Epoch: 10 Loss: 0.16249994933605194 Accuracy: 83.5\n",
+      "Epoch: 11 Loss: 0.16840437054634094 Accuracy: 83.9\n",
+      "Epoch: 12 Loss: 0.17301011085510254 Accuracy: 82.2\n",
+      "Epoch: 13 Loss: 0.17343157529830933 Accuracy: 81.9\n",
+      "Epoch: 14 Loss: 0.15697996318340302 Accuracy: 84.0\n",
+      "Epoch: 15 Loss: 0.14851225912570953 Accuracy: 84.6\n",
+      "Epoch: 16 Loss: 0.15340712666511536 Accuracy: 82.8\n",
+      "Epoch: 17 Loss: 0.14542700350284576 Accuracy: 83.5\n",
+      "Epoch: 18 Loss: 0.14289404451847076 Accuracy: 83.4\n",
+      "Epoch: 19 Loss: 0.14925725758075714 Accuracy: 85.3\n",
+      "Epoch: 20 Loss: 0.15819697082042694 Accuracy: 85.9\n",
+      "Epoch: 21 Loss: 0.1432388722896576 Accuracy: 83.9\n",
+      "Epoch: 22 Loss: 0.14540737867355347 Accuracy: 82.6\n",
+      "Epoch: 23 Loss: 0.14861562848091125 Accuracy: 82.3\n",
+      "Epoch: 24 Loss: 0.13521084189414978 Accuracy: 85.1\n",
+      "Epoch: 25 Loss: 0.12648752331733704 Accuracy: 85.2\n",
+      "Epoch: 26 Loss: 0.15329931676387787 Accuracy: 83.4\n",
+      "Epoch: 27 Loss: 0.12628716230392456 Accuracy: 85.3\n",
+      "Epoch: 28 Loss: 0.13795636594295502 Accuracy: 85.3\n",
+      "Epoch: 29 Loss: 0.13880909979343414 Accuracy: 83.6\n",
+      "Epoch: 30 Loss: 0.13860486447811127 Accuracy: 84.7\n",
+      "Epoch: 31 Loss: 0.13130253553390503 Accuracy: 86.6\n",
+      "Epoch: 32 Loss: 0.13731758296489716 Accuracy: 83.5\n",
+      "Epoch: 33 Loss: 0.14607606828212738 Accuracy: 85.4\n",
+      "Epoch: 34 Loss: 0.14479710161685944 Accuracy: 85.8\n",
+      "Epoch: 35 Loss: 0.16805411875247955 Accuracy: 86.2\n",
+      "Epoch: 36 Loss: 0.15614517033100128 Accuracy: 84.0\n",
+      "Epoch: 37 Loss: 0.16582737863063812 Accuracy: 80.5\n",
+      "Epoch: 38 Loss: 0.14536428451538086 Accuracy: 83.8\n",
+      "Epoch: 39 Loss: 0.1433609277009964 Accuracy: 86.4\n",
+      "Epoch: 40 Loss: 0.1345565915107727 Accuracy: 84.0\n",
+      "Epoch: 41 Loss: 0.14863541722297668 Accuracy: 86.9\n",
+      "Epoch: 42 Loss: 0.19721978902816772 Accuracy: 82.7\n",
+      "Epoch: 43 Loss: 0.14244818687438965 Accuracy: 83.9\n",
+      "Epoch: 44 Loss: 0.13539916276931763 Accuracy: 85.2\n",
+      "Epoch: 45 Loss: 0.13411518931388855 Accuracy: 85.4\n",
+      "Epoch: 46 Loss: 0.18160244822502136 Accuracy: 84.0\n",
+      "Epoch: 47 Loss: 0.12706097960472107 Accuracy: 85.3\n",
+      "Epoch: 48 Loss: 0.1468384563922882 Accuracy: 84.9\n",
+      "Epoch: 49 Loss: 0.11170586943626404 Accuracy: 88.1\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "59.123333333333335"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "solver.classification_score(test_proj, test_labels_bin)"
+    "coefficients = solver.fit(optimizer, epochs=50)"
    ]
   },
   {
@@ -343,17 +261,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " GPU | Energy (J) | Avg. pow (W)\n",
-      "   0 |   35128.76 |       124.24\n",
-      "   2 |    9199.81 |        32.54\n",
-      "   1 |    8529.90 |        30.17\n",
-      " over a period of 282753 milliseconds.\n"
+      "Accuracy: 85.21666666666667\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "85.21666666666667"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ener3 = EM.energy()\n",
-    "print(ener3-ener2)"
+    "solver.classification_score(test_proj, test_labels_bin)"
    ]
   },
   {
@@ -602,5 +525,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
